@@ -1,3 +1,5 @@
+* growable-forms: on_add_mod_url handler function could cancel the add action if return empty value
+
 Version 2.3.0
 ==============
 
